--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.11.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
